Fix contacts info alignment

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -48,6 +48,11 @@ p {
 .address-block {
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
+  dd {
+    &.no-xs {
+      text-align: left;
+    }
+  }
 }
 
 a {
